src/error/snapshots/hebi__error__tests__emit_report_multi_line_edge_case_sandwiched_newline.snap
---
source: src/error/tests.rs
expression: "Error::new(\"error: test\", 0..2).report(\"\\\"\\n\\\\\", true)"
---
error: test
| [4;31m"[0m

