src/error/snapshots/hebi__error__tests__emit_report_multi_line_large.snap
---
source: src/error/tests.rs
expression: "cx.error(\"error: test\",\n        13..76).report(\"let x: Foo = Bar {\\n  a: 0,\\n  b: 0,\\n  c: 0,\\n  d: 0,\\n  e: 0,\\n  f: 0,\\n  g: 0,\\n};\",\n    true)"
---
error: test
| let x: Foo = [4;31mBar {[0m
| [4;31m  a: 0,[0m
| [4;31m  b: 0,[0m
| [4;31m  c: 0,[0m
| [4;31m  d: 0,[0m
| [4;31m  e: 0,[0m
| [4;31m  f: 0,[0m
| [4;31m  g: 0,[0m
| [4;31m}[0m;
