src/error/snapshots/hebi__error__tests__emit_report_single_line.snap
---
source: src/error/tests.rs
expression: "Error::new(\"error: test\", 10..11).report(\"let x = 10\\nlet y = 20;\", true)"
---
error: test
| let x = 10[4;31m_[0m

