src/error/snapshots/hebi__error__tests__snippet_multi_line-3.snap
---
source: src/error/tests.rs
expression: "cx.error(\"error: test\", 1..3).report(\"\\n\\\\n\", true)"
---
error: test
| [4;31m\n[0m

