src/error/snapshots/hebi__error__tests__snippet_multi_line-4.snap
---
source: src/error/tests.rs
expression: "cx.error(\"error: test\", 19..19).report(\"d(                 \", true)"
---
error: test
