src/error/snapshots/hebi__error__tests__snippet_multi_line-5.snap
---
source: src/error/tests.rs
expression: "cx.error(\"error: test\", 4..6).report(\"\\u{9389a}\\\"\\n\", true)"
---
error: test
| 򓢚[4;31m"[0m

