src/error/snapshots/hebi__error__tests__snippet_multi_line-6.snap
---
source: src/error/tests.rs
expression: "Error::new(\"error: test\", 0..2).report(\"x \", true)"
---
error: test
| [4;31mx [0m

