src/error/snapshots/hebi__error__tests__snippet_multi_line-7.snap
---
source: src/error/tests.rs
expression: "cx.error(\"error: test\", 0..2).report(\"З  \", true)"
---
error: test
| [4;31mЗ[0m

