src/error/snapshots/hebi__error__tests__snippet_multi_line.snap
---
source: src/error/tests.rs
expression: "Error::new(\"error: test\",\n        6..17).report(\"lorem ipsum\\ndolor sit amet\\nconsectetur adipiscing elit\",\n    true)"
---
error: test
| lorem [4;31mipsum[0m
| [4;31mdolor[0m sit amet
