src/error/snapshots/hebi__error__tests__snippet_single_line.snap
---
source: src/error/tests.rs
expression: "Error::new(\"error: test\",\n        6..17).report(\"lorem ipsum dolor sit amet consectetur adipiscing elit\",\n    true)"
---
error: test
| lorem [4;31mipsum dolor[0m

